[package]
name = "lau-port-v2"
version = "0.1.0"
edition = "2021"
description = "Async-native port system replacing blocking_lock() deadlock risk"
license = "MIT"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
